[gd_scene load_steps=10 format=3 uid="uid://bwqe4q4ogy3t1"]

[ext_resource type="Script" uid="uid://b4widvab7we44" path="res://Scripts/Board.gd" id="1_r8ymi"]
[ext_resource type="PackedScene" uid="uid://fnd4ocn5rmes" path="res://Scenes/Objects/Items/disk.tscn" id="4_h8i5x"]
[ext_resource type="PackedScene" uid="uid://6rvluknqcohs" path="res://Scenes/outline.tscn" id="5_dguuv"]
[ext_resource type="PackedScene" uid="uid://cac1a31c0rtw6" path="res://Scenes/UI/Menus/player_info_overlay.tscn" id="12_qmttr"]
[ext_resource type="PackedScene" uid="uid://ddpoynsma8lx7" path="res://Scenes/Locations/boss_hub.tscn" id="21_bb5wj"]

[sub_resource type="BoxMesh" id="BoxMesh_1vdan"]
size = Vector3(1, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1p071"]
size = Vector3(1, 1, 0.2)

[sub_resource type="LabelSettings" id="LabelSettings_a5tvk"]
font_size = 160
font_color = Color(0.364706, 0.807843, 1, 1)
outline_size = 20
outline_color = Color(0.12549, 0.309804, 0.67451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dutb6"]
font_size = 160
font_color = Color(0.552941, 0, 0.0117647, 1)
outline_size = 20
outline_color = Color(0.368627, 0, 0.0823529, 1)

[node name="Board" type="Node3D" node_paths=PackedStringArray("main_camera", "overhead_camera")]
script = ExtResource("1_r8ymi")
main_camera = NodePath("Board Camera")
overhead_camera = NodePath("Overhead Camera")

[node name="PlayerInfo" parent="." instance=ExtResource("12_qmttr")]

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.7, 13)
visible = false

[node name="Disk Platform" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 13)
mesh = SubResource("BoxMesh_1vdan")

[node name="Disk Platform2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.59722, 12.4255)
visible = false
mesh = SubResource("BoxMesh_1p071")

[node name="Disk" parent="." instance=ExtResource("4_h8i5x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 13)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.515293, 0.857014, 0, -0.857014, 0.515293, 0, 10.2203, 0)
light_energy = 0.36
shadow_enabled = true
shadow_normal_bias = 3.0
directional_shadow_mode = 0

[node name="Overhead Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7, 0)

[node name="Outline" parent="Overhead Camera" instance=ExtResource("5_dguuv")]

[node name="Board Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.848048, 0.529919, 0, -0.529919, 0.848048, 0.000745773, 3.72851, 5.00918)

[node name="Outline" parent="Board Camera" instance=ExtResource("5_dguuv")]

[node name="Players" type="Node" parent="."]

[node name="Chunks" type="Node" parent="."]

[node name="Chunk1" type="Node3D" parent="Chunks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -20)

[node name="Chunk2" type="Node3D" parent="Chunks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, -20)

[node name="Chunk3" type="Node3D" parent="Chunks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -40)

[node name="Chunk4" type="Node3D" parent="Chunks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -40)

[node name="Chunk5" type="Node3D" parent="Chunks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 2)

[node name="Chunk6" type="Node3D" parent="Chunks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 2)

[node name="BossHub" parent="." instance=ExtResource("21_bb5wj")]

[node name="RoundText" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_a5tvk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathText" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_dutb6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SavingLabel" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 143.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Saving..."

[node name="TurnOrder" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(250, 75)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -432.0
offset_right = 250.0
offset_bottom = 432.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[editable path="BossHub"]
[editable path="BossHub/Start"]
